--- a/.editorconfig
+++ b/.editorconfig
@@ -21,6 +21,10 @@ indent_size = 4
 indent_style = space
 indent_size = 4
 
+[*.{yaml,yml}]
+indent_style = space
+indent_size = 2
+
 [Makefile]
 indent_style = tab
 indent_size = 4
