--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -28,7 +28,7 @@ sealed = { version = "0.3", default-features = false }
     features = ["clone-impls", "derive", "extra-traits", "parsing", "printing"]
 
 [dev-dependencies]
-synthez = { version = "0.1.0-dev", path = ".." }
+synthez = { version = "0.1.0-dev", path = "..", features = ["full"] }
 
 [package.metadata.docs.rs]
 all-features = true
