--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -135,3 +135,71 @@ jobs:
           toolchain: stable
 
       - run: make doc crate=${{ matrix.crate }} open=no clean=yes
+
+
+
+
+  #############
+  # Releasing #
+  #############
+
+  release-github:
+    name: Release on GitHub
+    needs: ['clippy', 'rustfmt', 'rustdoc', 'test', 'msrv']
+    if: ${{ startsWith(github.ref, 'refs/tags/v') }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Parse release version
+        id: release
+        run: echo ::set-output name=VERSION::${GITHUB_REF#refs/tags/v}
+
+      - name: Verify release version matches `syntez-core` Cargo manifest
+        run: >-
+          test "${{ steps.release.outputs.VERSION }}" \
+            == "$(grep -m1 'version = "' core/Cargo.toml | cut -d '"' -f2)"
+      - name: Verify release version matches `synthez-codegen` Cargo manifest
+        run: >-
+          test "${{ steps.release.outputs.VERSION }}" \
+            == "$(grep -m1 'version = "' codegen/Cargo.toml | cut -d '"' -f2)"
+      - name: Verify release version matches `synthez` Cargo manifest
+        run: >-
+          test "${{ steps.release.outputs.VERSION }}" \
+            == "$(grep -m1 'version = "' Cargo.toml | cut -d '"' -f2)"
+
+      - name: Parse CHANGELOG link
+        id: changelog
+        run: echo ::set-output
+          name=LINK::https://github.com/${{ github.repository }}/blob/v${{ steps.release.outputs.VERSION }}/CHANGELOG.md#$(sed -n '/^## \[${{ steps.release.outputs.VERSION }}\]/{s/^## \[\(.*\)\][^0-9]*\([0-9].*\)/\1--\2/;s/[^0-9a-z-]*//g;p;}' CHANGELOG.md)
+
+      - uses: softprops/action-gh-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          name: ${{ steps.release.outputs.VERSION }}
+          body: |
+            [API docs](https://docs.rs/synthez/${{ steps.release.outputs.VERSION }})
+            [Changelog](${{ steps.changelog.outputs.LINK }})
+          prerelease: ${{ contains(steps.release.outputs.VERSION, '-') }}
+
+  release-crate:
+    name: Release on crates.io
+    needs: ['release-github']
+    if: ${{ startsWith(github.ref, 'refs/tags/v') }}
+    strategy:
+      matrix:
+        crate:
+          - core
+          - codegen
+          - ''
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+
+      - run: cargo publish --token ${{ secrets.CRATESIO_TOKEN }}
+        working-directory: ./${{ matrix.crate }}
