--- a/codegen/Cargo.toml
+++ b/codegen/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "synthez-codegen"
-version = "0.1.0-dev"
+version = "0.1.0"
 edition = "2018"
 resolver = "2"
 description = "Internal codegen shim of synthez crate"
@@ -11,12 +11,13 @@ homepage = "https://github.com/arcana-rs/synthez/tree/master/codegen"
 repository = "https://github.com/arcana-rs/synthez/tree/master/codegen"
 readme = "README.md"
 categories = ["development-tools::build-utils"]
+include = ["/src/", "/Cargo.toml", "/README.md"]
 
 [lib]
 proc-macro = true
 
 [dependencies]
-synthez-core = { version = "0.1.0-dev", path = "../core" }
+synthez-core = { version = "0.1.0", path = "../core" }
 [dependencies.proc-macro2]
     version = "1.0.4"
     default-features = false
@@ -27,7 +28,7 @@ synthez-core = { version = "0.1.0-dev", path = "../core" }
     features = ["parsing", "proc-macro"]
 
 [dev-dependencies]
-synthez = { version = "0.1.0-dev", path = "..", features = ["full"] }
+synthez = { version = "0.1.0", path = "..", features = ["full"] }
 [dev-dependencies.syn]
     version = "1.0.72"
     default-features = false
