Switch to 2021 Rust edition
- bump up MSRV to 1.56
- lint sources harder
- reuse READMEs in Rust docs
- bump up crates' versions to 0.2.0

Additionally:
- test isolated Cargo features on CI
- fix broken `syn` links in Rust docs

--- a/.clippy.toml
+++ b/.clippy.toml
@@ -1,3 +1,15 @@
 # Project configuration for Clippy Rust code linter.
 # See full lints list at:
 # https://rust-lang.github.io/rust-clippy/master/index.html
+
+standard-macro-braces = [
+    { name = "assert", brace = "(" },
+    { name = "assert_eq", brace = "(" },
+    { name = "assert_ne", brace = "(" },
+    { name = "format", brace = "(" },
+    { name = "format_ident", brace = "(" },
+    { name = "matches", brace = "(" },
+    { name = "parse_quote", brace = "{" },
+    { name = "quote", brace = "{" },
+    { name = "vec", brace = "[" },
+]
