--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -2,6 +2,11 @@ name: Security audit
 
 on:
   push:
+    branches: ["master"]
+    tags: ["v*"]
+    paths: ["**/Cargo.toml"]
+  pull_request:
+    branches: ["master"]
     paths: ["**/Cargo.toml"]
   schedule:
     - cron: "7 7 * * *"
@@ -11,6 +16,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
       - uses: actions-rs/audit-check@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
