--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
           toolchain: stable
           components: clippy
 
-      - run: make lint
+      - run: make cargo.lint
 
   rustfmt:
     if: ${{ github.ref == 'refs/heads/master'
@@ -44,7 +44,7 @@ jobs:
           toolchain: nightly
           components: rustfmt
 
-      - run: make fmt check=yes
+      - run: make cargo.fmt check=yes
 
 
 
@@ -53,8 +53,71 @@ jobs:
   # Testing #
   ###########
 
+  cargo-feature:
+    name: Cargo feature
+    if: ${{ github.ref == 'refs/heads/master'
+            || startsWith(github.ref, 'refs/tags/v')
+            || !contains(github.event.head_commit.message, '[skip ci]') }}
+    strategy:
+      fail-fast: false
+      matrix:
+        feature: ["<none>", "full"]
+        crate:
+          - synthez-core
+          - synthez
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: nightly
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+          override: true
+
+      - run: cargo +nightly update -Z minimal-versions
+
+      - run: cargo check -p ${{ matrix.crate }} --no-default-features
+                   ${{ matrix.feature != '<none>'
+                       && format('--features {0}', matrix.feature)
+                       || '' }}
+        env:
+          RUSTFLAGS: -D warnings
+
+  msrv:
+    name: MSRV
+    if: ${{ github.ref == 'refs/heads/master'
+            || startsWith(github.ref, 'refs/tags/v')
+            || !contains(github.event.head_commit.message, '[skip ci]') }}
+    strategy:
+      fail-fast: false
+      matrix:
+        msrv: ["1.56.0"]
+        os:
+          - ubuntu
+          - macOS
+          - windows
+    runs-on: ${{ matrix.os }}-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: nightly
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: ${{ matrix.msrv }}
+          override: true
+
+      - run: cargo +nightly update -Z minimal-versions
+
+      - run: make test.cargo
+
   test:
-    name: Test
     if: ${{ github.ref == 'refs/heads/master'
             || startsWith(github.ref, 'refs/tags/v')
             || !contains(github.event.head_commit.message, '[skip ci]') }}
@@ -82,48 +145,18 @@ jobs:
           toolchain: ${{ matrix.toolchain }}
           override: true
 
-      - run: make test crate=${{ matrix.crate }}
-
-  msrv:
-    name: MSRV
-    if: ${{ github.ref == 'refs/heads/master'
-            || startsWith(github.ref, 'refs/tags/v')
-            || !contains(github.event.head_commit.message, '[skip ci]') }}
-    strategy:
-      fail-fast: false
-      matrix:
-        msrv: ['1.52.0']
-        os:
-          - ubuntu
-          - macOS
-          - windows
-    runs-on: ${{ matrix.os }}-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: nightly
-      - uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: ${{ matrix.msrv }}
-          override: true
-
-      - run: cargo +nightly update -Z minimal-versions
-
-      - run: make test
+      - run: make test.cargo crate=${{ matrix.crate }}
 
 
 
 
-  ############
-  # Building #
-  ############
+  #################
+  # Documentation #
+  #################
 
   rustdoc:
     if: ${{ github.ref == 'refs/heads/master'
-            || startsWith(github.ref, 'refs/tags/synthez-')
+            || startsWith(github.ref, 'refs/tags/v')
             || !contains(github.event.head_commit.message, '[skip ci]') }}
     strategy:
       matrix:
@@ -139,7 +172,7 @@ jobs:
           profile: minimal
           toolchain: stable
 
-      - run: make doc crate=${{ matrix.crate }} open=no clean=yes
+      - run: make cargo.doc crate=${{ matrix.crate }} private=yes open=no
 
 
 
@@ -150,7 +183,7 @@ jobs:
 
   release-github:
     name: Release on GitHub
-    needs: ['clippy', 'rustfmt', 'rustdoc', 'test', 'msrv']
+    needs: ["cargo-feature", "clippy", "msrv", "rustdoc", "rustfmt", "test"]
     if: ${{ startsWith(github.ref, 'refs/tags/v') }}
     runs-on: ubuntu-latest
     steps:
@@ -190,7 +223,7 @@ jobs:
 
   release-crate:
     name: Release on crates.io
-    needs: ['release-github']
+    needs: ["release-github"]
     if: ${{ startsWith(github.ref, 'refs/tags/v') }}
     runs-on: ubuntu-latest
     steps:
@@ -201,19 +234,19 @@ jobs:
           toolchain: stable
 
       - name: Publish `synthez-core` crate
-        run: cargo publish --token ${{ secrets.CRATESIO_TOKEN }}
-        working-directory: ./core
+        run: cargo publish -p synthez-core
+                           --token ${{ secrets.CRATESIO_TOKEN }}
 
       - name: Wait crates.io index is updated
         run: sleep 120
 
       - name: Publish `synthez-codegen` crate
-        run: cargo publish --token ${{ secrets.CRATESIO_TOKEN }}
-        working-directory: ./codegen
+        run: cargo publish -p synthez-codegen
+                           --token ${{ secrets.CRATESIO_TOKEN }}
 
       - name: Wait crates.io index is updated
         run: sleep 120
 
       - name: Publish `synthez` crate
-        run: cargo publish --token ${{ secrets.CRATESIO_TOKEN }}
-        working-directory: ./
+        run: cargo publish -p synthez
+                           --token ${{ secrets.CRATESIO_TOKEN }}
