--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "synthez"
-version = "0.1.3"
-edition = "2018"
-resolver = "2"
-description = "Steroids for syn, quote and proc_macro2 crates"
+version = "0.2.0"
+edition = "2021"
+rust-version = "1.56"
+description = "Steroids for `syn`, `quote` and `proc-macro2` crates."
 authors = ["Kai Ren <tyranron@gmail.com>"]
 license = "BlueOak-1.0.0"
 documentation = "https://docs.rs/synthez"
@@ -17,19 +17,24 @@ categories = [
 ]
 include = ["/src/", "/Cargo.toml", "/CHANGELOG.md", "/LICENSE.md", "/README.md"]
 
+[package.metadata.docs.rs]
+all-features = true
+rustdoc-args = ["--cfg", "docsrs"]
+
 [features]
 # Same as `full` feature of `syn` crate.
 # Enables support of data structures for representing the syntax tree of all
 # valid Rust source code, including items and expressions.
-full = ["synthez-core/full"]
+full = ["syn/full", "synthez-core/full"]
 
 [dependencies]
-synthez-codegen = { version = "0.1.3", path = "./codegen" }
-synthez-core = { version = "0.1.3", path = "./core" }
+synthez-codegen = { version = "0.2", path = "./codegen" }
+synthez-core = { version = "0.2", path = "./core" }
+
+# Repeats the one from `synthez-core` crate.
+# For correct Rust docs rendering only!
+# TODO: Remove once docs render correctly without it.
+syn = { version = "1.0.72", features = ["clone-impls", "derive", "extra-traits", "parsing", "printing"], default-features = false }
 
 [workspace]
 members = ["codegen", "core"]
-
-[package.metadata.docs.rs]
-all-features = true
-rustdoc-args = ["--cfg", "docsrs"]
