--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "synthez-core"
-version = "0.1.3"
-edition = "2018"
-resolver = "2"
-description = "Internal implementations of synthez crate"
+version = "0.2.0"
+edition = "2021"
+rust-version = "1.56"
+description = "Internal implementations of `synthez` crate."
 authors = ["Kai Ren <tyranron@gmail.com>"]
 license = "BlueOak-1.0.0"
 documentation = "https://docs.rs/synthez-core"
@@ -12,6 +12,10 @@ repository = "https://github.com/arcana-rs/synthez/tree/master/core"
 readme = "README.md"
 categories = ["development-tools::procedural-macro-helpers"]
 include = ["/src/", "/Cargo.toml", "/README.md"]
+
+[package.metadata.docs.rs]
+all-features = true
+rustdoc-args = ["--cfg", "docsrs"]
 
 [features]
 # Same as `full` feature of `syn` crate.
@@ -23,14 +27,7 @@ full = ["syn/full"]
 proc-macro2 = { version = "1.0.4", default-features = false }
 quote = { version = "1.0.9", default-features = false }
 sealed = { version = "0.3", default-features = false }
-[dependencies.syn]
-    version = "1.0.72"
-    default-features = false
-    features = ["clone-impls", "derive", "extra-traits", "parsing", "printing"]
+syn = { version = "1.0.72", features = ["clone-impls", "derive", "extra-traits", "parsing", "printing"], default-features = false }
 
 [dev-dependencies]
 synthez = { path = "..", features = ["full"] }
-
-[package.metadata.docs.rs]
-all-features = true
-rustdoc-args = ["--cfg", "docsrs"]
