--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -155,9 +155,11 @@ jobs:
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: stable
+          toolchain: nightly
 
-      - run: make cargo.doc crate=${{ matrix.crate }} private=yes open=no
+      - run: make cargo.doc crate=${{ matrix.crate }}
+                            private=yes docsrs=yes
+                            open=no
 
 
 
