--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -169,7 +169,7 @@ jobs:
   #############
 
   release-crate:
-    name: Release on crates.io
+    name: release on crates.io
     if: ${{ startsWith(github.ref, 'refs/tags/v') }}
     needs: ["release-github"]
     runs-on: ubuntu-latest
@@ -199,7 +199,7 @@ jobs:
                            --token ${{ secrets.CRATESIO_TOKEN }}
 
   release-github:
-    name: Release on GitHub
+    name: release on GitHub
     if: ${{ startsWith(github.ref, 'refs/tags/v') }}
     needs: ["clippy", "feature", "msrv", "rustdoc", "rustfmt", "test"]
     runs-on: ubuntu-latest
@@ -208,8 +208,8 @@ jobs:
 
       - name: Parse release version
         id: release
-        run: echo ::set-output
-                  name=version::${GITHUB_REF#refs/tags/v}
+        run: echo "version=${GITHUB_REF#refs/tags/v}"
+             >> $GITHUB_OUTPUT
       - name: Verify release version matches `syntez-core` Cargo manifest
         run: |
           test "${{ steps.release.outputs.version }}" \
@@ -225,8 +225,8 @@ jobs:
 
       - name: Parse CHANGELOG link
         id: changelog
-        run: echo ::set-output
-                  name=link::${{ github.server_url }}/${{ github.repository }}/blob/v${{ steps.release.outputs.version }}/CHANGELOG.md#$(sed -n '/^## \[${{ steps.release.outputs.version }}\]/{s/^## \[\(.*\)\][^0-9]*\([0-9].*\)/\1--\2/;s/[^0-9a-z-]*//g;p;}' CHANGELOG.md)
+        run: echo "link=${{ github.server_url }}/${{ github.repository }}/blob/v${{ steps.release.outputs.version }}/CHANGELOG.md#$(sed -n '/^## \[${{ steps.release.outputs.version }}\]/{s/^## \[\(.*\)\][^0-9]*\([0-9].*\)/\1--\2/;s/[^0-9a-z-]*//g;p;}' CHANGELOG.md)"
+             >> $GITHUB_OUTPUT
 
       - uses: softprops/action-gh-release@v1
         with:
