Rename GitHub org as `arcane-rs`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,8 @@ description = "Steroids for `syn`, `quote` and `proc-macro2` crates."
 authors = ["Kai Ren <tyranron@gmail.com>"]
 license = "BlueOak-1.0.0"
 documentation = "https://docs.rs/synthez"
-homepage = "https://github.com/arcana-rs/synthez"
-repository = "https://github.com/arcana-rs/synthez"
+homepage = "https://github.com/arcane-rs/synthez"
+repository = "https://github.com/arcane-rs/synthez"
 readme = "README.md"
 keywords = ["codegen", "derive", "macro", "syn"]
 categories = [
