--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,10 +82,7 @@ jobs:
       fail-fast: false
       matrix:
         msrv: ["1.62.0"]
-        os:
-          - ubuntu
-          - macOS
-          - windows
+        os: ["ubuntu", "macOS", "windows"]
     runs-on: ${{ matrix.os }}-latest
     steps:
       - uses: actions/checkout@v3
@@ -109,14 +106,8 @@ jobs:
           - synthez-core
           - synthez-codegen
           - synthez
-        os:
-          - ubuntu
-          - macOS
-          - windows
-        toolchain:
-          - stable
-          - beta
-          - nightly
+        toolchain: ["stable", "beta", "nightly"]
+        os: ["ubuntu", "macOS", "windows"]
     runs-on: ${{ matrix.os }}-latest
     steps:
       - uses: actions/checkout@v3
@@ -157,6 +148,8 @@ jobs:
       - run: make cargo.doc crate=${{ matrix.crate }}
                             private=yes docsrs=yes
                             open=no
+        env:
+          RUSTFLAGS: -D warnings
 
 
 
@@ -165,8 +158,8 @@ jobs:
   # Releasing #
   #############
 
-  release-crate:
-    name: release on crates.io
+  publish:
+    name: publish (crates.io)
     if: ${{ startsWith(github.ref, 'refs/tags/v') }}
     needs: ["release-github"]
     runs-on: ubuntu-latest
@@ -176,26 +169,20 @@ jobs:
         with:
           toolchain: stable
 
-      - name: Publish `synthez-core` crate
-        run: cargo publish -p synthez-core
-                           --token ${{ secrets.CRATESIO_TOKEN }}
+      - run: cargo publish -p synthez-core
+        env:
+          CARGO_REGISTRY_TOKEN: ${{ secrets.CRATESIO_TOKEN }}
 
-      - name: Wait crates.io index is updated
-        run: sleep 120
+      - run: cargo publish -p synthez-codegen
+        env:
+          CARGO_REGISTRY_TOKEN: ${{ secrets.CRATESIO_TOKEN }}
 
-      - name: Publish `synthez-codegen` crate
-        run: cargo publish -p synthez-codegen
-                           --token ${{ secrets.CRATESIO_TOKEN }}
-
-      - name: Wait crates.io index is updated
-        run: sleep 120
-
-      - name: Publish `synthez` crate
-        run: cargo publish -p synthez
-                           --token ${{ secrets.CRATESIO_TOKEN }}
+      - run: cargo publish -p synthez
+        env:
+          CARGO_REGISTRY_TOKEN: ${{ secrets.CRATESIO_TOKEN }}
 
   release-github:
-    name: release on GitHub
+    name: release (GitHub)
     if: ${{ startsWith(github.ref, 'refs/tags/v') }}
     needs: ["clippy", "feature", "msrv", "rustdoc", "rustfmt", "test"]
     runs-on: ubuntu-latest
