--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,10 +62,10 @@ jobs:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@v1
         with:
-          toolchain: stable
+          toolchain: nightly
       - uses: dtolnay/rust-toolchain@v1
         with:
-          toolchain: nightly
+          toolchain: stable
 
       - run: cargo +nightly update -Z minimal-versions
 
@@ -88,11 +88,10 @@ jobs:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@v1
         with:
-          toolchain: ${{ matrix.msrv }}
-      - run: rustup default ${{ matrix.msrv }}
+          toolchain: nightly
       - uses: dtolnay/rust-toolchain@v1
         with:
-          toolchain: nightly
+          toolchain: ${{ matrix.msrv }}
 
       - run: cargo +nightly update -Z minimal-versions
 
@@ -115,7 +114,6 @@ jobs:
         with:
           toolchain: ${{ matrix.toolchain }}
           components: rust-src
-      - run: rustup default ${{ matrix.toolchain }}
 
       - run: cargo install cargo-careful
         if: ${{ matrix.toolchain == 'nightly' }}
@@ -211,7 +209,8 @@ jobs:
         run: echo "link=${{ github.server_url }}/${{ github.repository }}/blob/v${{ steps.release.outputs.version }}/CHANGELOG.md#$(sed -n '/^## \[${{ steps.release.outputs.version }}\]/{s/^## \[\(.*\)\][^0-9]*\([0-9].*\)/\1--\2/;s/[^0-9a-z-]*//g;p;}' CHANGELOG.md)"
              >> $GITHUB_OUTPUT
 
-      - uses: softprops/action-gh-release@v1
+      - name: Create GitHub release
+        uses: softprops/action-gh-release@v1
         with:
           name: ${{ steps.release.outputs.version }}
           body: |
