--- a/.clippy.toml
+++ b/.clippy.toml
@@ -2,6 +2,8 @@
 # See full lints list at:
 # https://rust-lang.github.io/rust-clippy/master/index.html
 
+absolute-paths-allowed-crates = ["syn"]
+
 standard-macro-braces = [
     { name = "assert", brace = "(" },
     { name = "assert_eq", brace = "(" },
